Correct mistake in lang_load_success

--- a/src/main/resources/translations/pl_PL.yml
+++ b/src/main/resources/translations/pl_PL.yml
@@ -1,6 +1,6 @@
 # Polish translation, by Tymon Marek (TymonMarek)
 
-lang_load_success: "Bingo! Załadowano język en_PL!"
+lang_load_success: "Bingo! Załadowano język pl_PL!"
 
 plugin_success_load: "Pomyślnie załadowano Lunamatic v"
 
